Bug 16713 - [s390x] Member "sa_flags" does not have the correct type.
Summary: [s390x] Member "sa_flags" does not have the correct type.
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.20
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-17 08:00 UTC by Stefan Liebler
Modified: 2014-06-13 09:18 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Liebler 2014-03-17 08:00:55 UTC
on S390x the conformance test conform/POSIX/signal.h/conform.out is failing, due to incorrect type.
The member sa_flags in struct sigaction on s390x is defined
as unsigned long instead of int due to the kernel struct.
Comment 1 Sourceware Commits 2014-03-24 16:00:04 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "GNU C Library master sources".

The branch, master has been updated
       via  509361270b4b889e991400a70eb87d45304c01cd (commit)
       via  26011b5cfa6a1a8d8005d65f11d97498444a4e95 (commit)
       via  a2d86bf1ec3208e838156be8b90e3790946948f4 (commit)
       via  78b6eebcf1b33c71ae5028422f500a0e48b20544 (commit)
       via  f1399b5a2bc03e0585f16e892b635c503e72563b (commit)
      from  a071766ebfd853179ac39f9773f894029bf86d36 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=509361270b4b889e991400a70eb87d45304c01cd

commit 509361270b4b889e991400a70eb87d45304c01cd
Author: Stefan Liebler <stli@linux.vnet.ibm.com>
Date:   Mon Mar 24 16:49:13 2014 +0100

    S390: Fix namespace violation in struct stat (BZ #16714).

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=26011b5cfa6a1a8d8005d65f11d97498444a4e95

commit 26011b5cfa6a1a8d8005d65f11d97498444a4e95
Author: Stefan Liebler <stli@linux.vnet.ibm.com>
Date:   Mon Mar 24 16:46:51 2014 +0100

    S390: Define SIZE_MAX as unsigned long (BZ #16712).

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=a2d86bf1ec3208e838156be8b90e3790946948f4

commit a2d86bf1ec3208e838156be8b90e3790946948f4
Author: Stefan Liebler <stli@linux.vnet.ibm.com>
Date:   Mon Mar 24 16:34:49 2014 +0100

    S390: Correct type of sa_flags in struct sigaction for POSIX conformance
    (BZ #16713).

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=78b6eebcf1b33c71ae5028422f500a0e48b20544

commit 78b6eebcf1b33c71ae5028422f500a0e48b20544
Author: Stefan Liebler <stli@linux.vnet.ibm.com>
Date:   Mon Mar 24 16:32:47 2014 +0100

    Use += before-compile instead of a :=.

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=f1399b5a2bc03e0585f16e892b635c503e72563b

commit f1399b5a2bc03e0585f16e892b635c503e72563b
Author: Stefan Liebler <stli@linux.vnet.ibm.com>
Date:   Mon Mar 24 16:31:13 2014 +0100

    S390: Fix -Wundef warning for __PTHREAD_MUTEX_HAVE_ELISION.

-----------------------------------------------------------------------

Summary of changes:
 ChangeLog                                          |   33 ++++++++++++++++++++
 .../unix/sysv/linux/s390/bits/pthreadtypes.h       |    2 +
 posix/Makefile                                     |    2 +-
 sysdeps/generic/stdint.h                           |    6 +++-
 sysdeps/s390/s390-32/bits/wordsize.h               |    1 +
 sysdeps/s390/s390-64/bits/wordsize.h               |    1 +
 sysdeps/unix/sysv/linux/s390/bits/sigaction.h      |    3 +-
 sysdeps/unix/sysv/linux/s390/bits/stat.h           |    4 +-
 8 files changed, 47 insertions(+), 5 deletions(-)
Comment 2 Stefan Liebler 2014-03-25 08:21:46 UTC
Fixed with commit from comment 1.