S390: Correct type of sa_flags in struct sigaction for POSIX conformance (BZ #16713).